tests/baselines/reference/YieldExpression10_es6.errors.txt
tests/cases/conformance/es6/yieldExpressions/YieldExpression10_es6.ts(2,11): error TS2552: Cannot find name 'foo'. Did you mean 'v'?


==== tests/cases/conformance/es6/yieldExpressions/YieldExpression10_es6.ts (1 errors) ====
    var v = { * foo() {
        yield(foo);
              ~~~
!!! error TS2552: Cannot find name 'foo'. Did you mean 'v'?
      }
    }
    